* v1.4.0 (unreleased)
  -

* v1.3.1 (unreleased)
  -

* v1.3.0 (8 February 2021)
  - Experimental QtQuick support (#49)
  - Added static DockWidgetBase::byName() (#126)
  - The enum KDDockWidgets::AddingOption has been deprecated, use
    KDDockWidgets::InitialVisibilityOption instead
  - You can now pass a preferred initial size to MainWindow::addDockWidget() (#95)
  - Added DockWidgetBase::Option_DeleteOnClose
  - Added Config::Flag_CloseOnlyCurrentTab
  - PySide6 support
  - Layout restorer now restores maximzied/minimized state too (#81)
  - Fixed dock indicators sometimes not appearing on Windows (#103)
  - Fixed Flag_NativeTitleBar not working
  - Fixed drag offset when dragging too fast with mouse
  - Fixed bug where last tab index position wouldn't be remembered in case user
    had manually reordered tabs (#154)
  - Fixed crash when hosting a QQuickWidget (#150)
  - Fixed CMake Visual Studio generator not working
  - Sidebar overlays now maintain their size when toggled (#155)
  - Added DockWidget::setFloatingGeometry() (#144)

* v1.2.1 (6 February 2021)
  - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)
  - Fixed title bar close button enabled state not being restored with Layout saver (#137)
  - Installs a version header (kddockwidgets_version.h) that defines a version string and other useful versioning macros (#138)
  - DockWidgetBase::eventFilter() is protected instead of private (regression vs v1.1) (#148)
    It's recommended that you rebuild your application when updating KDDW, as MSVC encodes private/protected in the name mangling.
  - Fixed WASM build on Windows (#163)
  - Fixed sidebar overlay not getting hidden when clicking on the main window docking area (#157)

* v1.2.0 (17 December 2020)
  - Wayland support
  - Added Flag_KeepAboveIfNotUtilityWindow, so you can have keep above even if
    floating window is shown in the task-bar.
  - Added DockWidget::windowActiveAboutToChange() signal